samples/_failures_safe/1761510336_c2847f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bacb493.c: In function ‘main’:
./samples/SAFE/__tmp_8bacb493.c:148:9: error: expected expression at end of input
  148 |         if (filter_level == -
      |         ^~
./samples/SAFE/__tmp_8bacb493.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bacb493.c:148:9: error: expected declaration or statement at end of input
